Config vercel for deployment

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
-        "@vueuse/motion": "^3.0.3"
+        "@vueuse/motion": "^3.0.3",
+        "ziggy": "^2.4.0",
+        "ziggy-js": "github:tightenco/ziggy"
     }
 }
